--- a/Kidsgame.css
+++ b/Kidsgame.css
@@ -1,85 +1,125 @@
 body{
     display: flex;
     height: 100vh;
+    width: 100%;
     justify-content: center;
+    background-image: url(assets/Kidsbackground.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-origin: content-box;
 }
-.displayArea{
+
+.answer{
+    height: 30px;
+    -webkit-text-stroke: 1px black;
+}
+
+#displayArea{
     height: 500px;
     flex-direction: column;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 500px;
-    background-color: blue;
+    background-color: orchid;
 }
+
 .contentContainer{
     flex-direction: column;
     display:flex;
     justify-content: center;
 }
+
 .gameButton{
-    
-    width: 50%;
-    
+    width: 50%;  
 }
 #startButton{
     background-color: #00ab66;
 }
+
 #stopButton{
     background-color: #cf142b;
 }
+
 .buttonArea{
     width: 100%;
     display: flex;
     justify-content: center;
     justify-content: space-evenly;
 }
-.defaultDisplay{
-    
-    background-color: black;
-    width: 300px;
-    height: 300px;
-}
-#correctAnswers{
-    margin-top: 10px;
-}
+
 .triangle{
     width: 0;
       height: 0;
-      border-left: 50px solid transparent;
-      border-right: 50px solid transparent;
-      border-bottom: 100px solid red;
-
-}
-.square{
-    width: 100px;
-  height: 100px;
-  background: green;
-
-}
-.rectangle{
-    width: 200px;
-  height: 100px;
-  background: purple;
-
-}
-.star{
-    margin: 50px 0;
-      position: relative;
-      display: block;
-      color: orange;
-      width: 0px;
-      height: 0px;
-      border-right: 100px solid transparent;
-      border-bottom: 70px solid red;
       border-left: 100px solid transparent;
-      transform: rotate(35deg);
+      border-right: 100px solid transparent;
+      border-bottom: 200px solid #FBEC5D;
 
 }
-.circle{
-    width: 100px;
-  height: 100px;
-  background: pink;
-  border-radius: 50%
 
+.square{
+    width: 200px;
+  height: 200px;
+  background-color: #FBEC5D;
+
+}
+
+.rectangle{
+    width: 300px;
+  height: 150px;
+  background-color: #FBEC5D;
+}
+
+.star {
+    margin: 50px 0;
+    position: relative;
+    display: block;
+    color: #FBEC5D;
+    width: 0px;
+    height: 0px;
+    border-right: 100px solid transparent;
+    border-bottom: 70px solid #FBEC5D;
+    border-left: 100px solid transparent;
+    transform: rotate(35deg);
+  }
+  .star:before {
+    border-bottom: 80px solid #FBEC5D;
+    border-left: 30px solid transparent;
+    border-right: 30px solid transparent;
+    position: absolute;
+    height: 0;
+    width: 0;
+    top: -45px;
+    left: -65px;
+    display: block;
+    content: '';
+    transform: rotate(-35deg);
+  }
+  .star:after {
+    position: absolute;
+    display: block;
+    color: #FBEC5D;
+    top: 3px;
+    left: -105px;
+    width: 0px;
+    height: 0px;
+    border-right: 100px solid transparent;
+    border-bottom: 70px solid #FBEC5D;
+    border-left: 100px solid transparent;
+    transform: rotate(-70deg);
+    content: '';
+  }
+
+.circle{
+    width: 200px;
+  height: 200px;
+  background: #FBEC5D;
+  border-radius: 50%
+}
+
+.largeDisplayNumber{
+    font-size: 200px;
+    color: #d3d3d5;
+    -webkit-text-stroke: 1px black;
 }
